ui. Show search on Ctrl+F

--- a/Diagnosis.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.App/Windows/Shell/MainWindow.xaml
@@ -92,6 +92,8 @@
                             Value="{x:Null}" />
                     <Setter Property="BorderThickness"
                             Value="0" />
+                    <Setter Property="Background"
+                            Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
                 </Style>
             </shell:MyDockingManager.Style>
             <shell:MyDockingManager.LayoutItemContainerStyleSelector>
