--- a/Diagnosis.App/Windows/HelpWindow.xaml
+++ b/Diagnosis.App/Windows/HelpWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Помощь"
-        Height="500"
-        Width="500">
+        SizeToContent="Width"
+        Height="500">
     <Grid>
         <RichTextBox x:Name="rtb"
                      BorderThickness="0"
