--- a/Diagnosis.App/Controls/Search/Autocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/Autocomplete.xaml
@@ -7,9 +7,10 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
-             GotFocus="UserControl_GotFocus"
+             GotKeyboardFocus="autocomplete_GotKeyboardFocus"
              LostFocus="UserControl_LostFocus"
              LostKeyboardFocus="UserControl_LostKeyboardFocus"
+             Focusable="True"
              x:Name="autocomplete"
              beh:ClipboardBehavior.ClipboardTarget="True"
              mc:Ignorable="d"
